# farmer

./: .gitignore  LICENSE  README.md  pyproject.toml
farmer/: __init__.py  detect_alert.md  detect_alert_vi.md  element.py  farmer.py  farmer_sync.py  image_search.py
farmer/browser/: __init__.py  browser.py  connector.py  launcher.py
farmer/core/: __init__.py  connection.py  logger.py
farmer/human/: __init__.py  curves.py  human.py  human_iframe.py  timing.py
farmer/page/: __init__.py  keyboard_raw.py  mouse_raw.py  page.py
farmer/utils/: __init__.py  key_map.py
tests/: test_basic.py
