[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "farmer"
dynamic = ["version"]
description = "Stealth browser automation via raw CDP — human-like interaction with zero Runtime.enable."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "huutuan99bg"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
]
keywords = ["cdp", "chrome", "automation", "stealth", "browser", "devtools", "anti-detect"]

dependencies = [
    "websockets>=12.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/huutuan99bg/farmer"
Repository = "https://github.com/huutuan99bg/farmer"
Issues = "https://github.com/huutuan99bg/farmer/issues"

[tool.setuptools.dynamic]
version = {attr = "farmer._version.__version__"}

[tool.setuptools.packages.find]
include = ["farmer*"]

[tool.setuptools.package-data]
farmer = ["py.typed", "detect_alert.md", "detect_alert_vi.md"]
